--- a/style.css
+++ b/style.css
@@ -54,9 +54,13 @@ article img{
  
 }
 
-article:hover{
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  }
+article div{
+  display: flex;
+  justify-content: space-around;
+  height: 8%;
+  padding-bottom: 5%;
+}
+
 article p {
   font-size: 2rem;
   padding: 0 10px;
@@ -68,14 +72,21 @@ article small{
 }
 
 article input{
- 
-  height: 5%;
+  height: 100%;
+  border-radius: 8px;
+  border: none;
 }
 article button{
   background-color: #2CC5FA;
   border: none;
-  width: 100%;
-  height: 8%;
+  width: 50%;
+  height: 100%;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+}
+
+button:hover{
+  opacity: 0.8;
 }
 
 #total{
